Perkin-UAT/force-app/main/default/objects/Product2/fields/Advanced_Training_Price__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Training_Price__c</fullName>
    <description>Field created for BigMachines Implementation as part of Caliper migration.</description>
    <label>Advanced Training Price</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>