Perkin-UAT/force-app/main/default/objects/Product2/fields/Analytical_Cross_Sell_Peten__c.field-meta.xml
<CustomField>
    <fullName>Analytical_Cross_Sell_Peten__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Analytical Cross Sell Perten</label>
    <type>Checkbox</type>
</CustomField>