Perkin-UAT/force-app/main/default/objects/Product2/fields/ATO_Products__c.field-meta.xml
<CustomField>
    <fullName>ATO_Products__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to check if the product is part of Assemble to Order(ATO) (Source: S-692538)</description>
    <inlineHelpText>Part of Assemble to Order</inlineHelpText>
    <label>ATO Products</label>
    <type>Checkbox</type>
</CustomField>