Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_320X320_Large_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>B2B_320X320_Large_Image_URL__c</fullName>
    <label>320X320 Large Image URL</label>
    <type>Url</type>
</CustomField>