Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_3d_ImagePath__c.field-meta.xml
<CustomField>
    <fullName>B2B_3d_ImagePath__c</fullName>
    <label>3d ImagePath</label>
    <length>255</length>
    <type>Text</type>
</CustomField>