Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_50X50_Thumb_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>B2B_50X50_Thumb_Image_URL__c</fullName>
    <label>50X50 Thumb Image URL</label>
    <type>Url</type>
</CustomField>