Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Alternate_Products__c.field-meta.xml
<CustomField>
    <fullName>B2B_Alternate_Products__c</fullName>
    <label>B2B Alternate Products</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>