Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Antibody_Acceptor__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antibody_Acceptor__c</fullName>
    <label>Antibody Acceptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>