Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Antibody_Conjugates__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antibody_Conjugates__c</fullName>
    <label>Antibody Conjugates</label>
    <length>255</length>
    <type>Text</type>
</CustomField>