Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Antibody_Donor__c.field-meta.xml
<CustomField>
    <fullName>B2B_Antibody_Donor__c</fullName>
    <label>Antibody Donor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>