Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Automated_Plate_Movement__c.field-meta.xml
<CustomField>
    <fullName>B2B_Automated_Plate_Movement__c</fullName>
    <label>Automated Plate Movement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>