Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Autosampler_Compatible__c.field-meta.xml
<CustomField>
    <fullName>B2B_Autosampler_Compatible__c</fullName>
    <label>Autosampler Compatible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>