Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Barcodes__c.field-meta.xml
<CustomField>
    <fullName>B2B_Barcodes__c</fullName>
    <label>Barcodes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>