Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Bead_Type_or_Core_Bead_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Bead_Type_or_Core_Bead_Type__c</fullName>
    <label>Bead Type or Core Bead Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>