Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Brand_Name__c</fullName>
    <description>Used to select the brand name for products. Perk-75</description>
    <label>Brand Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AssureID</fullName>
            </value>
            <value>
                <fullName>BTO Orange Injection Port Septa</fullName>
            </value>
            <value>
                <fullName>Clarus</fullName>
            </value>
            <value>
                <fullName>Green Injection Port Septa</fullName>
            </value>
            <value>
                <fullName>LAMBDA</fullName>
            </value>
            <value>
                <fullName>Lumina</fullName>
            </value>
            <value>
                <fullName>NexION</fullName>
            </value>
            <value>
                <fullName>Pecosphere</fullName>
            </value>
            <value>
                <fullName>PerkinElmer Advanced Green</fullName>
            </value>
            <value>
                <fullName>PinAAcle</fullName>
            </value>
            <value>
                <fullName>PureView™</fullName>
            </value>
            <value>
                <fullName>SPB</fullName>
            </value>
            <value>
                <fullName>Spectrum Two</fullName>
            </value>
            <value>
                <fullName>Spheri-10</fullName>
            </value>
            <value>
                <fullName>Spheri-5</fullName>
            </value>
            <value>
                <fullName>Torion®</fullName>
            </value>
            <value>
                <fullName>TurboMatrix</fullName>
            </value>
            <value>
                <fullName>Pyris</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>