Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Bulk_Orders_Available__c.field-meta.xml
<CustomField>
    <fullName>B2B_Bulk_Orders_Available__c</fullName>
    <label>Bulk Orders Available</label>
    <length>255</length>
    <type>Text</type>
</CustomField>