Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>B2B_Business_Unit__c</fullName>
    <label>Business Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>