Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Buy_Now_Link__c.field-meta.xml
<CustomField>
    <fullName>B2B_Buy_Now_Link__c</fullName>
    <label>B2B Buy Now Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>