Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Capacity_Load_Throughput__c.field-meta.xml
<CustomField>
    <fullName>B2B_Capacity_Load_Throughput__c</fullName>
    <label>Capacity Load Throughput</label>
    <length>255</length>
    <type>Text</type>
</CustomField>