Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Catalog_Number__c.field-meta.xml
<CustomField>
    <fullName>B2B_Catalog_Number__c</fullName>
    <label>Catalog Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>