Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_column_Length__c.field-meta.xml
<CustomField>
    <fullName>B2B_column_Length__c</fullName>
    <label>B2B column Length</label>
    <length>255</length>
    <type>Text</type>
</CustomField>