Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Country_Specific_Translations__c.field-meta.xml
<CustomField>
    <fullName>B2B_Country_Specific_Translations__c</fullName>
    <label>B2B Country Specific Translations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>