Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Default_image__c.field-meta.xml
<CustomField>
    <fullName>B2B_Default_image__c</fullName>
    <label>Default image</label>
    <length>255</length>
    <type>Text</type>
</CustomField>