Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Depth__c.field-meta.xml
<CustomField>
    <fullName>B2B_Depth__c</fullName>
    <description>Used to select the depth for products. Perk- 75</description>
    <label>Depth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30.0 cm</fullName>
            </value>
            <value>
                <fullName>44.0 cm</fullName>
            </value>
            <value>
                <fullName>61.0 cm</fullName>
            </value>
            <value>
                <fullName>72.0 cm</fullName>
            </value>
            <value>
                <fullName>85.0 cm</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>