Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Detection_Limit__c.field-meta.xml
<CustomField>
    <fullName>B2B_Detection_Limit__c</fullName>
    <label>Detection Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>