Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Detection_Method__c.field-meta.xml
<CustomField>
    <fullName>B2B_Detection_Method__c</fullName>
    <description>Used to select the detection method for products. Perk-75</description>
    <label>Detection Method</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASTM D3612-01</fullName>
            </value>
            <value>
                <fullName>Method C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>