Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Dimensions_Film_Thickness__c.field-meta.xml
<CustomField>
    <fullName>B2B_Dimensions_Film_Thickness__c</fullName>
    <label>Dimensions - Film Thickness</label>
    <length>255</length>
    <type>Text</type>
</CustomField>