Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Disclaimer__c.field-meta.xml
<CustomField>
    <fullName>B2B_Disclaimer__c</fullName>
    <label>Disclaimer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>