Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Display_Name__c</fullName>
    <label>Display Name</label>
    <length>100000</length>
    <translateData>true</translateData>
    <type>LongTextArea</type>
</CustomField>