Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_End_Cap__c.field-meta.xml
<CustomField>
    <fullName>B2B_End_Cap__c</fullName>
    <label>End Cap</label>
    <length>255</length>
    <type>Text</type>
</CustomField>