Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_End_of_Production_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_End_of_Production_Date__c</fullName>
    <label>End of Production Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>