Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Entity_Use_Code__c.field-meta.xml
<CustomField>
    <fullName>B2B_Entity_Use_Code__c</fullName>
    <description>PERK-329</description>
    <label>Entity Use Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>none</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>