Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_FAQ_Section__c.field-meta.xml
<CustomField>
    <fullName>B2B_FAQ_Section__c</fullName>
    <label>FAQ Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>