Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Featured_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Featured_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Featured Product</label>
    <type>Checkbox</type>
</CustomField>