Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Flame_Type__c.field-meta.xml
<CustomField>
    <fullName>B2B_Flame_Type__c</fullName>
    <label>Flame Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>