Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Fluorophore__c.field-meta.xml
<CustomField>
    <fullName>B2B_Fluorophore__c</fullName>
    <label>Fluorophore</label>
    <length>255</length>
    <type>Text</type>
</CustomField>