Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Fractional_Quantities_Allowed__c.field-meta.xml
<CustomField>
    <fullName>B2B_Fractional_Quantities_Allowed__c</fullName>
    <label>B2B Fractional Quantities Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>