Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Fresh_Lot_Date__c.field-meta.xml
<CustomField>
    <fullName>B2B_Fresh_Lot_Date__c</fullName>
    <label>Fresh Lot Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>