Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_G_Alpha_Natural_Receptor__c.field-meta.xml
<CustomField>
    <fullName>B2B_G_Alpha_Natural_Receptor__c</fullName>
    <label>G-Alpha Natural Receptor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>