Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_GHS_Symbols_US__c.field-meta.xml
<CustomField>
    <fullName>B2B_GHS_Symbols_US__c</fullName>
    <label>GHS-Symbols - US</label>
    <length>255</length>
    <type>Text</type>
</CustomField>