Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_H1_Title_Tag__c.field-meta.xml
<CustomField>
    <fullName>B2B_H1_Title_Tag__c</fullName>
    <label>H1 Title Tag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>