Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_H_phrases_EU__c.field-meta.xml
<CustomField>
    <fullName>B2B_H_phrases_EU__c</fullName>
    <label>H phrases EU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>