Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Half_Life__c.field-meta.xml
<CustomField>
    <fullName>B2B_Half_Life__c</fullName>
    <label>Half Life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>