Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Harmonized_Code_US_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Harmonized_Code_US_Description__c</fullName>
    <label>B2B Harmonized Code US Description</label>
    <type>TextArea</type>
</CustomField>