Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Hit_To_Lead_UOM__c.field-meta.xml
<CustomField>
    <fullName>B2B_Hit_To_Lead_UOM__c</fullName>
    <label>B2B Hit To Lead UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>