Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Image_Gallery__c.field-meta.xml
<CustomField>
    <fullName>B2B_Image_Gallery__c</fullName>
    <label>Image Gallery</label>
    <length>255</length>
    <type>Text</type>
</CustomField>