Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Is_Hazardous__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Hazardous__c</fullName>
    <defaultValue>false</defaultValue>
    <label>B2B Is Hazardous</label>
    <type>Checkbox</type>
</CustomField>