Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_ISO_UoM__c.field-meta.xml
<CustomField>
    <fullName>B2B_ISO_UoM__c</fullName>
    <label>ISO UoM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>