Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Jaggaer_Category__c.field-meta.xml
<CustomField>
    <fullName>B2B_Jaggaer_Category__c</fullName>
    <label>Jaggaer Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>