Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Jaggaer_UNSPSC__c.field-meta.xml
<CustomField>
    <fullName>B2B_Jaggaer_UNSPSC__c</fullName>
    <label>Jaggaer UNSPSC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>