Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Length__c.field-meta.xml
<CustomField>
    <fullName>B2B_Length__c</fullName>
    <description>Used to select the length for products. Perk-75</description>
    <label>Length</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11-20</fullName>
            </value>
            <value>
                <fullName>21-30</fullName>
            </value>
            <value>
                <fullName>51-100</fullName>
            </value>
            <value>
                <fullName>101-200</fullName>
            </value>
            <value>
                <fullName>201-300</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>