Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Light_Path_UOM__c.field-meta.xml
<CustomField>
    <fullName>B2B_Light_Path_UOM__c</fullName>
    <label>B2B Light Path UOM</label>
    <length>255</length>
    <type>Text</type>
</CustomField>