Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Light_Source__c.field-meta.xml
<CustomField>
    <fullName>B2B_Light_Source__c</fullName>
    <label>Light Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>