Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Links__c.field-meta.xml
<CustomField>
    <fullName>B2B_Links__c</fullName>
    <label>B2B Links</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>