Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>B2B_Long_Description__c</fullName>
    <label>Long Description</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>