Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Management_display_name__c.field-meta.xml
<CustomField>
    <fullName>B2B_Management_display_name__c</fullName>
    <label>Management display name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>