Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Material_Price_Group__c.field-meta.xml
<CustomField>
    <fullName>B2B_Material_Price_Group__c</fullName>
    <label>Material Price Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>