Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Meta_Descriptions__c.field-meta.xml
<CustomField>
    <fullName>B2B_Meta_Descriptions__c</fullName>
    <label>Meta Descriptions</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>