Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Molecular_Modification__c.field-meta.xml
<CustomField>
    <fullName>B2B_Molecular_Modification__c</fullName>
    <label>Molecular Modification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>