Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_New_Product_Duration__c.field-meta.xml
<CustomField>
    <fullName>B2B_New_Product_Duration__c</fullName>
    <label>New Product Duration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>