Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_On_Web__c.field-meta.xml
<CustomField>
    <fullName>B2B_On_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>On Web</label>
    <type>Checkbox</type>
</CustomField>