Perkin-UAT/force-app/main/default/objects/Product2/fields/B2B_Outer_Diameter__c.field-meta.xml
<CustomField>
    <fullName>B2B_Outer_Diameter__c</fullName>
    <description>Used to select outer diameter for products. Perk-75</description>
    <label>Outer Diameter</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11 mm</fullName>
            </value>
            <value>
                <fullName>2 in</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>